--- a/style.css
+++ b/style.css
@@ -123,25 +123,79 @@ input::-webkit-inner-spin-button {
 
 #library{
   display: flex;
-  gap: 1rem;
+  margin: 0 1rem;
 }
 
 .card-container{
-  border:1px solid blue;
+  background-color: rgb(121, 173, 205);
+  color: #fff;
+  border-radius: 20px;
   display: flex;
   flex-direction: column;
-
+  justify-content: center;
+  align-items: center;
   width: 250px;
   min-height: 250px;
+  margin:1rem;
+  font-size: 20px;
 }
 
+.card-container{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.card-header{
+  margin: 0;
+  font-weight: 900;
+}
+
+.card-body{
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr;
+  grid-gap: 0 1rem;
+  margin:0;
+  padding:0;
+}
+
+.pages-books{
+  padding:0;
+  grid-column: 1/3;
+  grid-row: 1/2;
+  justify-self: center;
+}
+
+
+
 .read-status{
-  background-color: red;
+  padding:0;
+  grid-column: 1/3;
+  grid-row: 2/3;
+  justify-self: center;
+}
+
+.card-body button{
+  margin-bottom: 1rem;
+  font-weight: 900;
+  color:gray;
 }
 
 .remove-btn{
-  background-color: gray;
+  background-color: #fff;
   border-radius: 20px;
-  padding:.3rem 1rem;
-  color:#fff;
+  border: #fff;
+  padding:0 1rem;
+  color:black;
+  grid-column: 1/2;
+  grid-row: 3/4;
+}
+
+.toggle-read-btn{
+  background-color: #fff;
+  border-radius: 20px;
+  border: #fff;
+  grid-column:2/3;
+  grid-row: 3/4;
 }
